--- a/public/projects/index.html
+++ b/public/projects/index.html
@@ -609,7 +609,7 @@
 
         
         <div class="font-bold text-xl text-neutral-800 decoration-primary-500 hover:underline hover:underline-offset-2 dark:text-neutral"
-          href="/projects/picocalc-mod/">PicoCalc</div>
+          href="/projects/picocalc-mod/">PicoCalc mod</div>
         
 
         <div class="text-sm text-neutral-500 dark:text-neutral-400">
