--- a/public/projects/otsi_mk2/index.html
+++ b/public/projects/otsi_mk2/index.html
@@ -840,7 +840,7 @@
               <span class="flex flex-col">
                 <span
                   class="mt-[0.1rem] leading-6 group-hover:underline group-hover:decoration-primary-500"
-                  >PicoCalc</span
+                  >PicoCalc mod</span
                 >
                 <span class="mt-[0.1rem] text-xs text-neutral-500 dark:text-neutral-400">
                   
