--- a/public/projects/index.html
+++ b/public/projects/index.html
@@ -1641,7 +1641,7 @@
 
         
         <div class="py-1 prose dark:prose-invert">
-          Warning! This project is not well documented.A-N-Ulab/RC_car-LoRa_drivenController and reciver for controling rc based on rp2040, heltec_v3 and LoRaC&#43;&#43; 00Story #This project is another simple-ish build but more time than I would like to admit.
+          A mod for RC. Completely new remote based on LoRa, new and stronger battery, better H-Bridge.
         </div>
         
       </div>
