--- a/public/projects/rc-car-mode/index.html
+++ b/public/projects/rc-car-mode/index.html
@@ -11,7 +11,7 @@
   <title>RC car mode &middot; Glinek</title>
   <meta name="title" content="RC car mode &middot; Glinek" />
   
-  <meta name="description" content="An RC car mode" />
+  <meta name="description" content="A mod for RC. Completely new remote based on LoRa, new and stronger battery, better H-Bridge." />
   <meta name="keywords" content="Other, " />
   
   
@@ -93,7 +93,7 @@
     "name": "RC car mode",
     "headline": "RC car mode",
     "description": "An RC car mode",
-    "abstract": "Warning! This project is not well documented.\rA-N-Ulab\/RC_car-LoRa_driven\rController and reciver for controling rc based on rp2040, heltec_v3 and LoRa\rC\u0026#43;\u0026#43; 0\r0\rStory #\rThis project is another simple-ish build but more time than I would like to admit.",
+    "abstract": "A mod for RC. Completely new remote based on LoRa, new and stronger battery, better H-Bridge.",
     "inLanguage": "en",
     "url" : "\/\/localhost:1313\/projects\/rc-car-mode\/",
     "author" : {
@@ -1025,7 +1025,7 @@
               <span class="flex flex-col">
                 <span
                   class="mt-[0.1rem] leading-6 group-hover:underline group-hover:decoration-primary-500"
-                  >Pelican Case workstation</span
+                  >Cition portable</span
                 >
                 <span class="mt-[0.1rem] text-xs text-neutral-500 dark:text-neutral-400">
                   
