--- a/public/projects/chloe---hackyeah2024/index.html
+++ b/public/projects/chloe---hackyeah2024/index.html
@@ -806,7 +806,7 @@
               <span class="flex flex-col">
                 <span
                   class="mt-[0.1rem] leading-6 group-hover:underline group-hover:decoration-primary-500"
-                  >Pelican Case workstation</span
+                  >Cition portable</span
                 >
                 <span class="mt-[0.1rem] text-xs text-neutral-500 dark:text-neutral-400">
                   
