--- a/public/projects/obsium/index.html
+++ b/public/projects/obsium/index.html
@@ -121,7 +121,7 @@
   
   
   
-  <link href="mailto:simon@glinek.tech" rel="me" />
+  <link href="mailto:glinek@anulab.tech" rel="me" />
   
   
   <link href="https://github.com/Glinek" rel="me" />
@@ -1047,7 +1047,7 @@ And it has to be flexible. All my previous decks have failed at at least one of 
       <ul class="flex flex-col list-none sm:flex-row">
         
         <li class="flex mb-1 ltr:text-right rtl:text-left sm:mb-0 ltr:sm:mr-7 ltr:sm:last:mr-0 rtl:sm:ml-7 rtl:sm:last:ml-0">
-          <a class="decoration-primary-500 hover:underline hover:decoration-2 hover:underline-offset-2 flex items-center" href="mailto:simon@glinek.tech"
+          <a class="decoration-primary-500 hover:underline hover:decoration-2 hover:underline-offset-2 flex items-center" href="mailto:glinek@anulab.tech"
             title="">
             
             Email Me
