--- a/public/projects/irb1100-model/index.html
+++ b/public/projects/irb1100-model/index.html
@@ -110,7 +110,7 @@
     "keywords": ["Robotics","SchoolProject"],
     
     "mainEntityOfPage": "true",
-    "wordCount": "122"
+    "wordCount": "117"
   }]
   </script>
 
@@ -711,7 +711,7 @@ window.addEventListener('load', () => {
     </div>
 
     <p id="github-47f067e000bf32cb51d38680ba42413f-description" class="m-0 mt-2 text-md text-neutral-800 dark:text-neutral">
-      RobotStudio project that has an semi-accurate model of my school&rsquo;s IRB1100 education setup
+      A semi-accurate model of my schools robotic setup
     </p>
 
     <div class="m-0 mt-2 flex items-center">
