--- a/public/projects/otsi/index.html
+++ b/public/projects/otsi/index.html
@@ -111,7 +111,7 @@
     "keywords": ["Cyberpet","Otsi","Open Source"],
     
     "mainEntityOfPage": "true",
-    "wordCount": "498"
+    "wordCount": "494"
   }]
   </script>
 
@@ -724,7 +724,7 @@ window.addEventListener('load', () => {
     ><strong>Warning!</strong> Otsi mk1 is no longer under development. Check <a href="https://anulab.glinek.tech/projects/otsi.mk2/otsi-info/" target="_blank">Otsi.mk2</a></span>
 </div>
 <br>
-<a id="github-00a54f219610eb671fbde7c956f33a80" target="_blank" href="https://github.com/A-N-Ulab/OTSI-cyberpet" class="cursor-pointer">
+<a id="github-00a54f219610eb671fbde7c956f33a80" target="_blank" href="https://github.com/Glinek/OTSI-cyberpet" class="cursor-pointer">
   <div
     class="w-full md:w-auto pt-3 p-5 border border-neutral-200 dark:border-neutral-700 border rounded-md shadow-2xl">
 
@@ -742,12 +742,12 @@ window.addEventListener('load', () => {
       <div
         id="github-00a54f219610eb671fbde7c956f33a80-full_name"
         class="m-0 font-bold text-xl text-neutral-800 decoration-primary-500 hover:underline hover:underline-offset-2 dark:text-neutral">
-        A-N-Ulab/OTSI-cyberpet
+        Glinek/OTSI-cyberpet
       </div>
     </div>
 
     <p id="github-00a54f219610eb671fbde7c956f33a80-description" class="m-0 mt-2 text-md text-neutral-800 dark:text-neutral">
-      Otsi cyberpet for cyberdeck&rsquo;s cafe cyberpet contest
+      Your personal cyberpet
     </p>
 
     <div class="m-0 mt-2 flex items-center">
@@ -768,7 +768,7 @@ window.addEventListener('load', () => {
 
       </span>
       <div id="github-00a54f219610eb671fbde7c956f33a80-stargazers" class="m-0 mr-5 text-md text-neutral-800 dark:text-neutral">
-        6
+        1
       </div>
 
       <span class="text-md mr-1 text-neutral-800 dark:text-neutral">
@@ -788,7 +788,7 @@ window.addEventListener('load', () => {
 
   </div>
   <script>
-    fetch("https://api.github.com/repos/A-N-Ulab/OTSI-cyberpet", {
+    fetch("https://api.github.com/repos/Glinek/OTSI-cyberpet", {
       headers: new Headers({
         'User-agent': 'Mozilla/4.0 Custom User Agent'
       })
